syntax = "proto3";

message Void {}

message Book {
	string id = 1;
	string title = 2;
	string author = 3;
	string publishDate = 4;
	fixed32 pages = 5;
	float price = 6;
}

message BookList {
	repeated Book books = 1;
}

message BookId {
	string id = 1;
}

message AddBookResponse {
	string insertedId = 1;
}

service BookshopService {
	rpc List (Void) returns (BookList);
	rpc Find (BookId) returns (Book);
	rpc Add (Book) returns (AddBookResponse);
	rpc Remove (BookId) returns (Void);
}